게시물에 일련번호 추가하기

--- a/study.ipynb
+++ b/study.ipynb
@@ -1408,6 +1408,20 @@
    "source": [
     "- $: get_question_list($page)의 의미는 page 값이 변경될 경우 get_question_list 함수도 다시 호출하라는 의미입니다."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b95b82a",
+   "metadata": {},
+   "source": [
+    "## 시간 포맷을 사용할때\n",
+    "https://momentjs.com/\n",
+    "\n",
+    "## 설치\n",
+    "```shell\n",
+    "npm install moment\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
